--- a/stylesheets/partials/_nav.scss
+++ b/stylesheets/partials/_nav.scss
@@ -122,3 +122,7 @@
  
     
 }
+
+.emoji-toggle .toggle ~ .emoji:before {
+    left: -3px;
+}
