--- a/stylesheets/partials/_projects.scss
+++ b/stylesheets/partials/_projects.scss
@@ -11,7 +11,7 @@
    background-image:
     linear-gradient(
       to right, 
-      #e8e8e8, #e9e9e9
+     #e8e8e8, #e9e9e9 
     ); 
 }
 
@@ -81,6 +81,7 @@
     position: absolute;
     text-align: center; 
     letter-spacing: 1px;
+    transition: color 1s ease;
 }
 
 
@@ -128,9 +129,11 @@
     border-radius:2px;
     margin-left:49px;
     margin-right:32px;
+    transition: background 2s ease;
 }
 
 .fake-addr-bar:hover {
+    
     background: rgba(0,0,255, 0.8);
     .url {
     color: white;
