--- a/stylesheets/partials/_work.scss
+++ b/stylesheets/partials/_work.scss
@@ -93,3 +93,8 @@ float: right;
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
 } */
+
+#designHouseWorkScreenshot {
+    right: 50px;
+    position: relative;
+}
